--- a/views/battle.html
+++ b/views/battle.html
@@ -28,7 +28,7 @@
 
 <script>
     var pvp = {
-        url: "ws://192.168.31.111:8080/api/battle/vsrobot",
+        url: "ws://127.0.0.1:8080/api/authed/battle/vsrobot",
         round: 0,
         question: {},
         ws: {}
@@ -40,7 +40,7 @@
     function startPvp(ele) {
         var act = $(ele).val();
         if(act == "Practice"){
-            pvp.url =  "ws://192.168.31.111:8080/api/battle/practice"
+            pvp.url =  "ws://127.0.0.1:8080/api/authed/battle/practice"
         }
 
         _start()
